equalizer-landing-page/assets/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap');

:root {
  /* Colors */
  --dark: #191826;
  --light: #fcfaf9;
  --cyan: #66e2dc;
  --orange: #fa7453;
  --yellow: #ffb964;

  /* misc */
  --radius: 0.75rem;
}

*,
*:before,
*:after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: var(--light);
  background-image: url('/assets/images/bg-main-mobile.png');
  background-position: top -12rem right -12rem;
  background-repeat: no-repeat;
  font-family: 'IBM Plex Sans', sans-serif;
  min-height: 100vh;
}

/**************

  buttons

**************/

.btn {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: calc(32 / 18);
  letter-spacing: -0.0125rem;
  padding: 0.9375rem 0 0.875rem;
  border-radius: var(--radius);
  cursor: pointer;
}

.btn img {
  height: 1.25rem;
}

.btn--dark {
  background-color: var(--dark);
}

.btn--dark:hover {
  background-color: var(--cyan);
}

.btn--light {
  color: var(--dark);
  background-color: var(--light);
}

.btn--light:hover {
  background-color: var(--yellow);
}

/**************

  main section with header logo, h1, and some text

**************/

main {
  color: var(--dark);
}

.header__logo {
  margin-top: clamp(2.5rem, 0.5542rem + 6.9182vw, 3.875rem);
  margin-left: clamp(1.5rem, 0.0849rem + 5.0314vw, 2.5rem);
}

.main__text {
  margin-inline: clamp(1.5rem, 0.0849rem + 5.0314vw, 2.5rem);
  margin-top: clamp(4rem, 1.2583rem + 9.7484vw, 5.9375rem);
  max-width: 32rem;
}

.main__header {
  font-size: clamp(2.5rem, 0.3774rem + 7.5472vw, 4rem);
  font-weight: bold;
  line-height: clamp(3rem, 1.5849rem + 5.0314vw, 4rem);
  letter-spacing: -0.0625rem; /* TODO calculate clamp for letter spacing */
}

.main__para {
  font-size: clamp(1rem, 0.8231rem + 0.6289vw, 1.125rem);
  line-height: clamp(1.625rem, 1.4481rem + 0.6289vw, 1.75rem);
  margin-top: clamp(1.25rem, 0.5425rem + 2.5157vw, 1.75rem);
}

/* next section has dark backround with pattern and a device image,
 overlapped by orange section with price/buttons */

.dark__bg {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 43.5rem;
  margin-top: clamp(10.375rem, 2.9458rem + 26.4151vw, 15.625rem);
  margin-inline: auto;
  border-radius: var(--radius);
  background-color: var(--dark);
  background-image: url('/assets/images/bg-pattern-2.svg');
  background-size: 17.5rem;
  background-repeat: no-repeat;
  background-position: top;
}

.overlay__image {
  margin-top: clamp(-8.625rem, -2.5873rem - 12.5786vw, -6.125rem);
  width: clamp(13.0625rem, 7.6675rem + 19.1824vw, 16.875rem);
}

.color__bg {
  margin-top: 3rem;
  padding: 3rem 2.25rem;
  max-width: 24.9375rem;
  border-radius: var(--radius);
  color: var(--light);
  background-color: var(--orange);
}

.color__header {
  font-size: 2rem;
  font-weight: bold;
  line-height: 1.25;
}

.color__para {
  margin-top: 0.75rem;
  font-size: 1.125rem;
  line-height: calc(28 / 18);
}

.price__box {
  display: flex;
  align-items: center;
  margin: 2.25rem 0 0 0.375rem;
}

.price {
  margin-right: 1rem;
  font-size: 4.0625rem;
  font-weight: bold;
  line-height: calc(52 / 65);
}

.price__span {
  font-size: 1.25rem;
  font-weight: normal;
  letter-spacing: -0.2px;
}

.btn__container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  margin: 2rem 0.375rem 0;
}

/* next section is the footer with contact and site info */

.footer__main {
  margin: 4rem 1.5rem 5rem;
}

.footer__container {
  margin-top: 2rem;
}

.footer__content {
  line-height: 1.625;
}

.footer__email {
  font-weight: bold;
}

.footer__social {
  display: flex;
  align-items: center;
  gap: 1.25rem;
  margin-top: 4rem;
}

.social__link i {
  color: var(--dark);
}

.social__link i:hover {
  color: var(--orange);
}

/*********************

  Media queries

*********************/

/* Beginning of resize between mobile and tablet */

@media (min-width: 28.125rem) {
  .dark__bg {
    background-position: top -1.9375rem left 55%;
  }

  .overlay__image {
    margin-inline: 4rem auto;
  }

  .color__bg {
    margin-top: clamp(-16.75rem, 120rem + -293.3333vw, 3rem);
    margin-bottom: -6rem;
    margin-inline: auto 3.625rem;
    padding: 3rem;
  }

  .footer__main {
    margin: 6rem 2.4375rem 5.3125rem 2.0625rem;
    padding-top: 5.4375rem;
  }

  .footer__container {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .footer__content {
    max-width: 50%;
  }

  .footer__social {
    margin: 0;
  }
}

/* Rest of tablet query */

@media (min-width: 48rem) {
  body {
    background-image: url('/assets/images/bg-pattern-1.svg'),
      url('/assets/images/bg-main-tablet.png');
    background-position: top -2rem right -2.25rem, top -12rem right -8rem;
    background-size: 16.625rem, auto;
    background-repeat: no-repeat;
  }
}

/* Desktop */

@media (min-width: 62.5rem) {
  body {
    background-image: url('/assets/images/bg-pattern-1.svg'),
      url('/assets/images/bg-main-desktop.png');
    background-position: top -2.5rem right, top -16rem right -8rem;
    background-size: clamp(16.625rem, 10.0909rem + 10.4545vw, 19.5rem), auto;
    background-repeat: no-repeat;
  }

  .header__logo,
  .main__text {
    margin-left: clamp(3.875rem, -10.7557rem + 23.4091vw, 10.3125rem);
  }

  .main__text {
    margin-top: clamp(5.9375rem, 1.392rem + 7.2727vw, 7.9375rem);
    max-width: clamp(32rem, -23.1136rem + 88.1818vw, 54.25rem);
  }

  .main__header {
    font-size: clamp(4rem, 0.5909rem + 5.4545vw, 5.5rem);
    line-height: 1;
  }

  .main__para {
    font-size: clamp(1.125rem, 0.8409rem + 0.4545vw, 1.25rem);
    line-height: 2.125rem;
    margin-top: clamp(1.75rem, 0.0455rem + 2.7273vw, 2.5rem);
  }

  .dark__bg {
    margin-top: clamp(15.625rem, 5.5398rem + 16.1364vw, 20.0625rem);
    max-width: clamp(43.5rem, -15.3068rem + 94.0909vw, 69.375rem);
    background-size: clamp(17.5rem, 12.9545rem + 7.2727vw, 19.5rem);
    background-position: top -2.5rem left 42%;
  }

  .overlay__image {
    margin-top: clamp(-13.3125rem, 10.2102rem + -26.1364vw, -6.125rem);
    margin-inline: 6.375rem auto;
    width: clamp(16.875rem, 10.9091rem + 9.5455vw, 19.5rem);
  }

  .color__bg {
    margin-top: clamp(-21.1875rem, -6.6648rem + -16.1364vw, -16.75rem);
    margin-bottom: -7.1875rem;
    margin-inline: auto clamp(3.625rem, -1.6307rem + 8.4091vw, 5.9375rem);
    padding: 3.625rem 3.6875rem 3rem 3.375rem;
    max-width: clamp(24.9375rem, 18.2614rem + 10.6818vw, 27.875rem);
  }

  .color__header {
    font-size: clamp(2rem, 0.8636rem + 1.8182vw, 2.5rem);
    line-height: 3.25rem;
  }

  .color__para {
    margin-top: 1.375rem;
    font-size: clamp(1.125rem, 0.8409rem + 0.4545vw, 1.25rem);
    line-height: 2.125rem;
  }

  .price__box {
    margin: 2.4375rem 0 0 0;
  }

  .btn__container {
    margin: 2.875rem 0 0 0;
  }

  .footer__main {
    margin: 7.1875rem 10.3125rem 5.6875rem;
  }
}

/* Final desktop query for footer styling */

@media (min-width: 90rem) {
  .footer__main {
    margin-bottom: 8.625rem;
  }

  .footer__container {
    float: right;
    margin: 0;
    width: 51.625rem;
  }
}

